[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
socketioxide = { version = "0.16.2", features = ["state"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
thiserror.workspace = true

netcode = { path = "../netcode" }
